--- a/notebooks/data-transformation.ipynb
+++ b/notebooks/data-transformation.ipynb
@@ -11,7 +11,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 1,
             "id": "e5f6g7h8",
             "metadata": {},
             "outputs": [],
@@ -42,10 +42,18 @@
         },
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 2,
             "id": "m3n4o5p6",
             "metadata": {},
-            "outputs": [],
+            "outputs": [
+                {
+                    "name": "stdout",
+                    "output_type": "stream",
+                    "text": [
+                        "Train size: (120889, 195), Test size: (30223, 195)\n"
+                    ]
+                }
+            ],
             "source": [
                 "X = pd.get_dummies(X, columns=['source', 'browser', 'sex', 'country'], drop_first=True)\n",
                 "\n",
@@ -64,7 +72,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 3,
             "id": "u1v2w3x4",
             "metadata": {},
             "outputs": [],
@@ -86,10 +94,19 @@
         },
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 4,
             "id": "c9d0e1f2",
             "metadata": {},
-            "outputs": [],
+            "outputs": [
+                {
+                    "name": "stdout",
+                    "output_type": "stream",
+                    "text": [
+                        "Before SMOTE: {0: 109568, 1: 11321}\n",
+                        "After SMOTE: {0: 109568, 1: 109568}\n"
+                    ]
+                }
+            ],
             "source": [
                 "print(f\"Before SMOTE: {y_train.value_counts().to_dict()}\")\n",
                 "sm = SMOTE(random_state=42)\n",
