feat: Add initial raw and processed fraud detection data, trained models, and analysis notebooks.

--- a/notebooks/shap-explainability.ipynb
+++ b/notebooks/shap-explainability.ipynb
@@ -1,6 +1,39 @@
 {
-    "cells": [],
-    "metadata": {},
+    "cells": [
+        {
+            "cell_type": "markdown",
+            "metadata": {},
+            "source": [
+                "# Task 3 - Model Explainability (SHAP)\n",
+                "\n",
+                "**Objective:** Interpret the decisions made by the fraud detection models using SHAP (SHapley Additive exPlanations).\n",
+                "\n",
+                "This notebook will cover:\n",
+                "- Feature importance globally\n",
+                "- Local explanations for specific fraud vs. legitimate transactions\n",
+                "- Visualizing the drivers of fraud detection"
+            ]
+        }
+    ],
+    "metadata": {
+        "kernelspec": {
+            "display_name": "venv",
+            "language": "python",
+            "name": "python3"
+        },
+        "language_info": {
+            "codemirror_mode": {
+                "name": "ipython",
+                "version": 3
+            },
+            "file_extension": ".py",
+            "mimetype": "text/x-python",
+            "name": "python",
+            "nbconvert_exporter": "python",
+            "pygments_lexer": "ipython3",
+            "version": "3.13.7"
+        }
+    },
     "nbformat": 4,
-    "nbformat_minor": 5
+    "nbformat_minor": 2
 }
